test/libsolidity/syntaxTests/nameAndTypeResolution/236_cyclic_binary_dependency.sol
contract A { function f() public { new B(); } }
contract B { function f() public { new C(); } }
contract C { function f() public { new A(); } }
// ----
// TypeError 7813: (35-40): Circular reference found.
